--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,10 @@
     <title>Chat bot</title>
 </head>
 <body>
-    <h1>Hey!</h1>
+    
+    <button>Talk</button>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
